# mrtrix3-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: SCHEMA_MIGRATION_GUIDE.md  database-schema.md
knowledgeBase/: generate_embeddings.py  populate_database.py
monitoring/: PERFORMANCE.md  README.md  __init__.py  benchmarks.py  collectors.py  logging_config.py  metrics.py
scripts/: clean_session_logs.py  coverage_report.py
src/: __init__.py  __main__.py
src/agent/: __init__.py  __main__.py  agent.py  async_dependencies.py  cache.py  circuit_breaker.py  cli.py  config.py  dependencies.py  embedding_service.py  error_messages.py  local_storage_manager.py  markdown_fixer.py  models.py  monitoring_integration.py  rate_limiter.py  schema_migrations.py  session_logger.py  setup_config.py  slash_commands.py  storage_info.py  sync_manager.py  tools.py  validate_setup.py
src/knowledge_base/: __init__.py  error_extractor.py  generate_embeddings.py  populate_database.py
src/workflows/: __init__.py
src/workflows/sharefile/: __init__.py  sharefile.py
tests/: __init__.py  conftest.py
tests/agent/: __init__.py  test_agent.py  test_cache.py  test_circuit_breaker.py  test_cli.py  test_error_handling.py  test_log_collection.py  test_message_reconstruction.py  test_models.py  test_monitoring_integration.py  test_rag_logging.py  test_rate_limiter.py  test_slash_commands.py  test_tools.py
tests/e2e/: test_conversation_flow_e2e.py  test_conversation_scenarios.py  test_message_history_e2e.py
tests/integration/: test_agent_search.py  test_sharefile_integration.py  test_slash_commands_integration.py
tests/knowledgeBase/: test_sparse_checkout.py
tests/monitoring/: test_collectors.py  test_logging_config.py  test_metrics.py  test_monitoring_init.py
tests/performance/: test_performance_benchmarks.py
tests/unit/: __init__.py
